@@ -1,4 +1,6 @@
 * VampireApi 0.11.0
+  - java.io.File.isAbsolute
+  - java.io.File.isHidden
   - java.lang.System.Logger.Level
   - java.lang.reflect.UndeclaredThrowableException
   - java.lang.reflect.GenericSignatureFormatException
